--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
+    "airtable": "^0.11.4",
+    "algoliasearch": "^4.13.1",
     "ava": "^4.2.0",
     "date-fns": "^2.28.0",
     "esbuild-node-loader": "^0.8.0",
