--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.13",
     "micro-method-router": "^0.1.0",
-    "next": "^12.1.6",
+    "next": "12.1.6",
     "parse-bearer-token": "^1.0.1",
     "random-seed": "^0.3.0",
     "react": "^18.1.0",
